Implemented ML model to predict data quality issues with feature engineering and evaluation1

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,7 @@
     "\n",
     "# Step 1: Generate synthetic dataset\n",
     "def create_dataset(n=120):\n",
+    "    \"\"\"Generates synthetic dataset for anomaly detection\"\"\"\n",
     "    try:\n",
     "        np.random.seed(42)\n",
     "        ages = np.random.normal(40, 12, n).tolist() + [150, -20]\n",
@@ -59,12 +60,16 @@
     "        df = pd.DataFrame({'employee_age': ages, 'employee_salary': salaries})\n",
     "        logging.info(f\"Generated {len(df)} records with injected anomalies.\")\n",
     "        return df\n",
+    "    except ValueError as e:\n",
+    "        logging.error(f\"ValueError in data generation: {e}\")\n",
+    "        raise\n",
     "    except Exception as e:\n",
-    "        logging.error(f\"Error in data generation: {e}\")\n",
-    "        return pd.DataFrame()\n",
+    "        logging.error(f\"Unexpected error in data generation: {e}\")\n",
+    "        raise\n",
     "\n",
     "# Step 2: Apply Isolation Forest for anomaly detection\n",
     "def run_isolation_forest(df):\n",
+    "    \"\"\"Apply Isolation Forest to detect anomalies\"\"\"\n",
     "    try:\n",
     "        model = IsolationForest(n_estimators=100, contamination=0.05, random_state=0)\n",
     "        df['anomaly_score'] = model.decision_function(df[['employee_age', 'employee_salary']])\n",
@@ -72,12 +77,16 @@
     "        df['is_anomaly'] = df['is_anomaly'].map({1: 0, -1: 1})\n",
     "        logging.info(\"Isolation Forest applied. Anomalies flagged.\")\n",
     "        return df\n",
+    "    except ValueError as e:\n",
+    "        logging.error(f\"ValueError during anomaly detection: {e}\")\n",
+    "        raise\n",
     "    except Exception as e:\n",
-    "        logging.error(f\"Error during anomaly detection: {e}\")\n",
-    "        return df\n",
+    "        logging.error(f\"Unexpected error during anomaly detection: {e}\")\n",
+    "        raise\n",
     "\n",
     "# Step 3: Visualize results\n",
     "def plot_anomalies(df):\n",
+    "    \"\"\"Plot anomalies detected in the dataset\"\"\"\n",
     "    try:\n",
     "        plt.figure(figsize=(10, 6))\n",
     "        sns.scatterplot(\n",
@@ -95,21 +104,38 @@
     "        plt.tight_layout()\n",
     "        plt.show()\n",
     "        logging.info(\"Anomaly plot displayed.\")\n",
+    "    except ValueError as e:\n",
+    "        logging.error(f\"ValueError in plotting: {e}\")\n",
+    "        raise\n",
     "    except Exception as e:\n",
-    "        logging.error(f\"Plotting failed: {e}\")\n",
+    "        logging.error(f\"Unexpected error in plotting: {e}\")\n",
+    "        raise\n",
     "\n",
-    "# Step 4: Main pipeline\n",
+    "# Step 4: Save output with timestamp\n",
+    "def save_output(df):\n",
+    "    \"\"\"Save the results to a timestamped CSV\"\"\"\n",
+    "    try:\n",
+    "        timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "        output_file = f\"anomaly_output_{timestamp}.csv\"\n",
+    "        df.to_csv(output_file, index=False)\n",
+    "        logging.info(f\"Results saved to {output_file}\")\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error saving output: {e}\")\n",
+    "        raise\n",
+    "\n",
+    "# Main pipeline (split into smaller functions)\n",
     "def main():\n",
-    "    df = create_dataset()\n",
-    "    df = run_isolation_forest(df)\n",
-    "    plot_anomalies(df)\n",
-    "    \n",
-    "    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "    output_file = f\"anomaly_output_{timestamp}.csv\"\n",
-    "    df.to_csv(output_file, index=False)\n",
-    "    logging.info(f\"Results saved to {output_file}\")\n",
+    "    \"\"\"Main function to run the entire pipeline\"\"\"\n",
+    "    try:\n",
+    "        df = create_dataset()\n",
+    "        df = run_isolation_forest(df)\n",
+    "        plot_anomalies(df)\n",
+    "        save_output(df)\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error in main pipeline: {e}\")\n",
+    "        raise\n",
     "\n",
-    "# Run\n",
+    "# Run the pipeline\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
