--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
@@ -13,15 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: Successfully generated 122 data points with anomalies.\n",
-      "INFO: Anomaly detection completed using Isolation Forest.\n"
+      "2025-05-13 17:52:43,958 - INFO - Successfully generated 122 data points with anomalies.\n",
+      "2025-05-13 17:52:44,301 - INFO - Anomaly detection completed using Isolation Forest.\n"
      ]
     },
     {
@@ -38,8 +38,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: Anomaly plot displayed.\n",
-      "INFO: Results successfully saved to employee_anomalies_20250513_174836.csv.\n"
+      "2025-05-13 17:52:45,275 - INFO - Anomaly plot displayed.\n",
+      "2025-05-13 17:52:45,282 - INFO - Results successfully saved to employee_anomalies_20250513_175245.csv.\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
