--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_4.ipynb
@@ -13,15 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-13 17:52:43,958 - INFO - Successfully generated 122 data points with anomalies.\n",
-      "2025-05-13 17:52:44,301 - INFO - Anomaly detection completed using Isolation Forest.\n"
+      "2025-05-13 17:55:08,329 - INFO - Successfully generated 122 data points with anomalies.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-13 17:55:08,893 - INFO - Anomaly detection completed using Isolation Forest.\n"
      ]
     },
     {
@@ -38,8 +44,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-13 17:52:45,275 - INFO - Anomaly plot displayed.\n",
-      "2025-05-13 17:52:45,282 - INFO - Results successfully saved to employee_anomalies_20250513_175245.csv.\n"
+      "2025-05-13 17:55:09,608 - INFO - Anomaly plot displayed.\n",
+      "2025-05-13 17:55:09,613 - INFO - Results successfully saved to employee_anomalies_20250513_175509.csv.\n"
      ]
     }
    ],
@@ -64,6 +70,11 @@
     "        ages = np.random.normal(35, 10, sample_size).tolist() + [150, -10]  # Adding anomalies\n",
     "        salaries = np.random.normal(50000, 15000, sample_size).tolist() + [1000000, -20000]  # Adding anomalies\n",
     "        df = pd.DataFrame({'age': ages, 'salary': salaries})\n",
+    "        \n",
+    "        # Check for missing or invalid data (e.g., NaN values or non-numeric data)\n",
+    "        if df.isnull().any().any():\n",
+    "            raise ValueError(\"Data contains NaN values.\")\n",
+    "        \n",
     "        logging.info(f\"Successfully generated {len(df)} data points with anomalies.\")\n",
     "        return df\n",
     "    except Exception as e:\n",
@@ -74,18 +85,19 @@
     "def detect_anomalies(df):\n",
     "    \"\"\"Detect anomalies in the dataset using IsolationForest\"\"\"\n",
     "    try:\n",
-    "        # Ensure the model is fitted before using it\n",
+    "        # Ensure model is fitted with the data first\n",
     "        model = IsolationForest(n_estimators=100, contamination=0.05, random_state=42)\n",
     "        \n",
-    "        # Fit the model with the data first\n",
+    "        # Fit the model with the data\n",
     "        model.fit(df[['age', 'salary']])\n",
     "        \n",
-    "        # Then predict the anomalies and calculate anomaly scores\n",
+    "        # Predict the anomalies and calculate anomaly scores\n",
     "        df['anomaly_score'] = model.decision_function(df[['age', 'salary']])\n",
     "        df['is_anomaly'] = model.predict(df[['age', 'salary']])\n",
     "        \n",
     "        # Convert -1 (anomaly) to 1 and 1 (normal) to 0\n",
-    "        df['is_anomaly'] = df['is_anomaly'].map({1: 0, -1: 1})  \n",
+    "        df['is_anomaly'] = df['is_anomaly'].map({1: 0, -1: 1})\n",
+    "        \n",
     "        logging.info(\"Anomaly detection completed using Isolation Forest.\")\n",
     "        return df\n",
     "    except Exception as e:\n",
@@ -163,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
