Performed feature scaling on Boston Housing dataset and ensured consistent scaling during model inference in Ques_5.ipynb

--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_5.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_5.ipynb
@@ -98,7 +98,7 @@
     "    joblib.dump(model, 'california_model.pkl')\n",
     "    joblib.dump(scaler, 'california_scaler.pkl')\n",
     "except Exception as e:\n",
-    "    print(f\"Error saving model or scaler: {e}\")"
+    "    print(f\"Error saving model or scaler: {e}\")\n"
    ]
   }
  ],
