--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_6.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_6.ipynb
@@ -11,143 +11,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IOError: [Errno 2] No such file or directory: '/home/vscode/.local/lib/python3.10/site-packages/aif360/datasets/../data/raw/adult/adult.data'\n",
-      "To use this class, please download the following files:\n",
       "\n",
-      "\thttps://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data\n",
-      "\thttps://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.test\n",
-      "\thttps://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.names\n",
+      "Classification Report (Original):\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "and place them, as-is, in the folder:\n",
+      "           0       0.85      0.94      0.89      7455\n",
+      "           1       0.71      0.45      0.55      2314\n",
       "\n",
-      "\t/home/vscode/.local/lib/python3.10/site-packages/aif360/data/raw/adult\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# write your code from here\n",
-    "# Import libraries\n",
-    "import pandas as pd\n",
-    "from aif360.datasets import AdultDataset\n",
-    "from aif360.algorithms.preprocessing import Reweighing\n",
-    "from aif360.metrics import BinaryLabelDatasetMetric\n",
-    "\n",
-    "# Step 1: Load the Adult dataset\n",
-    "dataset = AdultDataset(protected_attribute_names=['sex'],  # 'sex' = gender\n",
-    "                       privileged_classes=[['Male']],\n",
-    "                       features_to_drop=[])\n",
-    "\n",
-    "# Step 2: Split dataset into train and test (optional but common)\n",
-    "dataset_train, dataset_test = dataset.split([0.7], shuffle=True)\n",
-    "\n",
-    "# Step 3: Compute fairness metrics before reweighing\n",
-    "metric_orig_train = BinaryLabelDatasetMetric(dataset_train,\n",
-    "                                             unprivileged_groups=[{'sex': 0}],\n",
-    "                                             privileged_groups=[{'sex': 1}])\n",
-    "print(\"### Before Reweighing ###\")\n",
-    "print(\"Difference in mean outcomes between unprivileged and privileged groups:\",\n",
-    "      metric_orig_train.mean_difference())\n",
-    "\n",
-    "# Step 4: Apply Reweighing Technique\n",
-    "RW = Reweighing(unprivileged_groups=[{'sex': 0}],\n",
-    "                privileged_groups=[{'sex': 1}])\n",
-    "dataset_transf_train = RW.fit_transform(dataset_train)\n",
-    "\n",
-    "# Step 5: Verify new weights\n",
-    "print(\"\\n### Sample Weights After Reweighing ###\")\n",
-    "print(dataset_transf_train.instance_weights[:10])\n",
-    "\n",
-    "# Step 6: Fairness metrics after reweighing\n",
-    "metric_transf_train = BinaryLabelDatasetMetric(dataset_transf_train,\n",
-    "                                               unprivileged_groups=[{'sex': 0}],\n",
-    "                                               privileged_groups=[{'sex': 1}])\n",
-    "print(\"\\n### After Reweighing ###\")\n",
-    "print(\"Difference in mean outcomes between unprivileged and privileged groups:\",\n",
-    "      metric_transf_train.mean_difference())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean difference before reweighing: -0.19627598779361352\n",
-      "Mean difference after reweighing: 2.7755575615628914e-17\n"
+      "    accuracy                           0.83      9769\n",
+      "   macro avg       0.78      0.70      0.72      9769\n",
+      "weighted avg       0.81      0.83      0.81      9769\n",
+      "\n",
+      "\n",
+      "Classification Report (With Reweighing):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.94      0.89      7455\n",
+      "           1       0.69      0.39      0.50      2314\n",
+      "\n",
+      "    accuracy                           0.81      9769\n",
+      "   macro avg       0.76      0.67      0.69      9769\n",
+      "weighted avg       0.80      0.81      0.79      9769\n",
+      "\n",
+      "\n",
+      "Fairness Metrics:\n",
+      "Mean difference before reweighing: -0.19585191128843257\n",
+      "Mean difference after reweighing: 0.0\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from aif360.datasets import BinaryLabelDataset\n",
     "from aif360.algorithms.preprocessing import Reweighing\n",
     "from aif360.metrics import BinaryLabelDatasetMetric\n",
     "\n",
-    "# Step 1: Download the dataset from UCI\n",
+    "# Step 1: Load the dataset\n",
     "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data'\n",
-    "column_names = ['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status',\n",
-    "                'occupation', 'relationship', 'race', 'sex', 'capital-gain', 'capital-loss',\n",
-    "                'hours-per-week', 'native-country', 'income']\n",
+    "columns = ['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status',\n",
+    "           'occupation', 'relationship', 'race', 'sex', 'capital-gain', 'capital-loss',\n",
+    "           'hours-per-week', 'native-country', 'income']\n",
     "\n",
-    "df = pd.read_csv(url, names=column_names, sep=',\\s*', engine='python')\n",
-    "\n",
-    "# Step 2: Preprocess\n",
+    "df = pd.read_csv(url, names=columns, sep=',\\s*', engine='python')\n",
     "df = df.dropna()\n",
-    "df = df[df['income'].isin(['<=50K', '>50K'])]  # remove unknowns\n",
     "\n",
-    "# Encode categorical features\n",
-    "categorical_cols = df.select_dtypes(include=['object']).columns\n",
-    "for col in categorical_cols:\n",
+    "# Step 2: Encode categorical variables\n",
+    "for col in df.select_dtypes(include='object'):\n",
     "    df[col] = LabelEncoder().fit_transform(df[col])\n",
     "\n",
-    "# Step 3: Convert to AIF360 BinaryLabelDataset\n",
-    "protected_attribute = 'sex'  # gender\n",
-    "label_name = 'income'\n",
-    "privileged_groups = [{'sex': 1}]   # 1 = Male after encoding\n",
-    "unprivileged_groups = [{'sex': 0}] # 0 = Female\n",
+    "# Step 3: Define features and labels\n",
+    "X = df.drop('income', axis=1)\n",
+    "y = df['income']  # 0: <=50K, 1: >50K\n",
     "\n",
-    "dataset = BinaryLabelDataset(df=df,\n",
-    "                             label_names=[label_name],\n",
-    "                             protected_attribute_names=[protected_attribute])\n",
+    "# Step 4: Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Step 4: Apply Reweighing\n",
+    "# Step 5: Combine for AIF360\n",
+    "train_df = X_train.copy()\n",
+    "train_df['income'] = y_train\n",
+    "\n",
+    "test_df = X_test.copy()\n",
+    "test_df['income'] = y_test\n",
+    "\n",
+    "# Step 6: Create BinaryLabelDataset for training data\n",
+    "dataset_orig_train = BinaryLabelDataset(df=train_df,\n",
+    "                                        label_names=['income'],\n",
+    "                                        protected_attribute_names=['sex'])\n",
+    "\n",
+    "dataset_orig_test = BinaryLabelDataset(df=test_df,\n",
+    "                                       label_names=['income'],\n",
+    "                                       protected_attribute_names=['sex'])\n",
+    "\n",
+    "# Define privileged and unprivileged groups\n",
+    "privileged_groups = [{'sex': 1}]   # male\n",
+    "unprivileged_groups = [{'sex': 0}] # female\n",
+    "\n",
+    "# Step 7: Apply Reweighing\n",
     "RW = Reweighing(unprivileged_groups=unprivileged_groups,\n",
     "                privileged_groups=privileged_groups)\n",
-    "dataset_transf = RW.fit_transform(dataset)\n",
+    "dataset_transf_train = RW.fit_transform(dataset_orig_train)\n",
     "\n",
-    "# Step 5: Fairness metrics\n",
-    "metric_orig = BinaryLabelDatasetMetric(dataset, \n",
+    "# Step 8: Train Logistic Regression with and without reweighing\n",
+    "\n",
+    "def train_and_evaluate(X_train, y_train, sample_weight, X_test, y_test, label=\"\"):\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "    model = LogisticRegression(max_iter=1000)\n",
+    "    model.fit(X_train_scaled, y_train, sample_weight=sample_weight)\n",
+    "    y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "    print(f\"\\nClassification Report {label}:\")\n",
+    "    print(classification_report(y_test, y_pred))\n",
+    "\n",
+    "# Without reweighing\n",
+    "train_and_evaluate(X_train, y_train, None, X_test, y_test, label=\"(Original)\")\n",
+    "\n",
+    "# With reweighing\n",
+    "train_and_evaluate(X_train, y_train, dataset_transf_train.instance_weights,\n",
+    "                   X_test, y_test, label=\"(With Reweighing)\")\n",
+    "\n",
+    "# Step 9: Check fairness metric\n",
+    "metric_orig = BinaryLabelDatasetMetric(dataset_orig_train, \n",
     "                                       unprivileged_groups=unprivileged_groups,\n",
     "                                       privileged_groups=privileged_groups)\n",
     "\n",
-    "metric_transf = BinaryLabelDatasetMetric(dataset_transf, \n",
-    "                                         unprivileged_groups=unprivileged_groups,\n",
-    "                                         privileged_groups=privileged_groups)\n",
+    "metric_rw = BinaryLabelDatasetMetric(dataset_transf_train, \n",
+    "                                     unprivileged_groups=unprivileged_groups,\n",
+    "                                     privileged_groups=privileged_groups)\n",
     "\n",
+    "print(\"\\nFairness Metrics:\")\n",
     "print(\"Mean difference before reweighing:\", metric_orig.mean_difference())\n",
-    "print(\"Mean difference after reweighing:\", metric_transf.mean_difference())\n"
+    "print(\"Mean difference after reweighing:\", metric_rw.mean_difference())\n"
    ]
   }
  ],
