--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_7.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_7.ipynb
@@ -11,23 +11,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TF-IDF training features shape: (4457, 1247)\n",
+      "TF-IDF test features shape: (1115, 1247)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code from here"
+    "# write your code from here\n",
+    "# Import required libraries\n",
+    "import pandas as pd\n",
+    "import string\n",
+    "import re\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Step 1: Load the dataset\n",
+    "url = \"https://raw.githubusercontent.com/justmarkham/pycon-2016-tutorial/master/data/sms.tsv\"\n",
+    "df = pd.read_csv(url, sep='\\t', header=None, names=['label', 'message'])\n",
+    "\n",
+    "# Step 2: Basic preprocessing function\n",
+    "def preprocess_text(text):\n",
+    "    # Convert to lowercase\n",
+    "    text = text.lower()\n",
+    "    # Remove punctuation\n",
+    "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
+    "    # Remove numbers\n",
+    "    text = re.sub(r'\\d+', '', text)\n",
+    "    # Remove extra whitespace\n",
+    "    text = text.strip()\n",
+    "    return text\n",
+    "\n",
+    "# Apply preprocessing\n",
+    "df['clean_text'] = df['message'].apply(preprocess_text)\n",
+    "\n",
+    "# Step 3: Encode labels (ham=0, spam=1)\n",
+    "label_encoder = LabelEncoder()\n",
+    "df['label_encoded'] = label_encoder.fit_transform(df['label'])\n",
+    "\n",
+    "# Step 4: Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    df['clean_text'], df['label_encoded'], test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Step 5: Convert text to numerical features using TF-IDF\n",
+    "tfidf_vectorizer = TfidfVectorizer(stop_words='english', max_df=0.9, min_df=5)\n",
+    "\n",
+    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
+    "X_test_tfidf = tfidf_vectorizer.transform(X_test)\n",
+    "\n",
+    "# Check output shape\n",
+    "print(\"TF-IDF training features shape:\", X_train_tfidf.shape)\n",
+    "print(\"TF-IDF test features shape:\", X_test_tfidf.shape)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
