--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_7.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_7.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -24,50 +24,77 @@
     }
    ],
    "source": [
-    "# write your code from here\n",
-    "# Import required libraries\n",
+    "# Ques_7.ipynb\n",
+    "\n",
     "import pandas as pd\n",
     "import string\n",
     "import re\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.exceptions import NotFittedError\n",
     "\n",
-    "# Step 1: Load the dataset\n",
-    "url = \"https://raw.githubusercontent.com/justmarkham/pycon-2016-tutorial/master/data/sms.tsv\"\n",
-    "df = pd.read_csv(url, sep='\\t', header=None, names=['label', 'message'])\n",
-    "\n",
-    "# Step 2: Basic preprocessing function\n",
     "def preprocess_text(text):\n",
-    "    # Convert to lowercase\n",
+    "    \"\"\"Clean a single text message.\"\"\"\n",
     "    text = text.lower()\n",
-    "    # Remove punctuation\n",
     "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
-    "    # Remove numbers\n",
     "    text = re.sub(r'\\d+', '', text)\n",
-    "    # Remove extra whitespace\n",
     "    text = text.strip()\n",
     "    return text\n",
     "\n",
-    "# Apply preprocessing\n",
-    "df['clean_text'] = df['message'].apply(preprocess_text)\n",
+    "def load_sms_spam_data(url):\n",
+    "    \"\"\"Load and return SMS Spam data from the given URL with error handling.\"\"\"\n",
+    "    try:\n",
+    "        df = pd.read_csv(url, sep='\\t', header=None, names=['label', 'message'])\n",
+    "    except Exception as e:\n",
+    "        raise RuntimeError(f\"Failed to load dataset from URL: {e}\")\n",
+    "    \n",
+    "    # Check for null values\n",
+    "    if df.isnull().values.any():\n",
+    "        print(\"Warning: Null values found. Dropping...\")\n",
+    "        df.dropna(inplace=True)\n",
     "\n",
-    "# Step 3: Encode labels (ham=0, spam=1)\n",
-    "label_encoder = LabelEncoder()\n",
-    "df['label_encoded'] = label_encoder.fit_transform(df['label'])\n",
+    "    return df\n",
     "\n",
-    "# Step 4: Split the data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    df['clean_text'], df['label_encoded'], test_size=0.2, random_state=42\n",
-    ")\n",
+    "def prepare_data(df):\n",
+    "    \"\"\"Preprocess and split the data into train/test sets.\"\"\"\n",
+    "    df['clean_text'] = df['message'].apply(preprocess_text)\n",
     "\n",
-    "# Step 5: Convert text to numerical features using TF-IDF\n",
-    "tfidf_vectorizer = TfidfVectorizer(stop_words='english', max_df=0.9, min_df=5)\n",
+    "    # Encode labels (ham=0, spam=1)\n",
+    "    label_encoder = LabelEncoder()\n",
+    "    df['label_encoded'] = label_encoder.fit_transform(df['label'])\n",
     "\n",
-    "X_train_tfidf = tfidf_vectorizer.fit_transform(X_train)\n",
-    "X_test_tfidf = tfidf_vectorizer.transform(X_test)\n",
+    "    # Split data\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        df['clean_text'], df['label_encoded'], test_size=0.2, random_state=42\n",
+    "    )\n",
     "\n",
-    "# Check output shape\n",
+    "    return X_train, X_test, y_train, y_test\n",
+    "\n",
+    "def tfidf_vectorize(X_train, X_test):\n",
+    "    \"\"\"Apply TF-IDF vectorization to the text data.\"\"\"\n",
+    "    tfidf = TfidfVectorizer(stop_words='english', max_df=0.9, min_df=5)\n",
+    "    \n",
+    "    try:\n",
+    "        X_train_vec = tfidf.fit_transform(X_train)\n",
+    "        X_test_vec = tfidf.transform(X_test)\n",
+    "    except NotFittedError:\n",
+    "        raise RuntimeError(\"TF-IDF Vectorizer not fitted properly.\")\n",
+    "    \n",
+    "    return X_train_vec, X_test_vec, tfidf\n",
+    "\n",
+    "# ================== RUN PIPELINE ==================\n",
+    "\n",
+    "URL = \"https://raw.githubusercontent.com/justmarkham/pycon-2016-tutorial/master/data/sms.tsv\"\n",
+    "\n",
+    "# Load and prepare\n",
+    "df_sms = load_sms_spam_data(URL)\n",
+    "X_train, X_test, y_train, y_test = prepare_data(df_sms)\n",
+    "\n",
+    "# Vectorize\n",
+    "X_train_tfidf, X_test_tfidf, tfidf_model = tfidf_vectorize(X_train, X_test)\n",
+    "\n",
+    "# Output TF-IDF shape info\n",
     "print(\"TF-IDF training features shape:\", X_train_tfidf.shape)\n",
     "print(\"TF-IDF test features shape:\", X_test_tfidf.shape)\n"
    ]
