Implemented text preprocessing and TF-IDF feature extraction for SMS Spam dataset in Ques_7.ipynb

--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_7.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_7.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "# Ques_7.ipynb\n",
+    "# Ques_7.ipynb - Updated with granular error handling and inline tests\n",
     "\n",
     "import pandas as pd\n",
     "import string\n",
@@ -35,7 +35,10 @@
     "from sklearn.exceptions import NotFittedError\n",
     "\n",
     "def preprocess_text(text):\n",
-    "    \"\"\"Clean a single text message.\"\"\"\n",
+    "    \"\"\"Clean a single text message with error handling for non-string input.\"\"\"\n",
+    "    if not isinstance(text, str):\n",
+    "        # Return empty string or you can raise an error\n",
+    "        return \"\"\n",
     "    text = text.lower()\n",
     "    text = text.translate(str.maketrans('', '', string.punctuation))\n",
     "    text = re.sub(r'\\d+', '', text)\n",
@@ -96,7 +99,22 @@
     "\n",
     "# Output TF-IDF shape info\n",
     "print(\"TF-IDF training features shape:\", X_train_tfidf.shape)\n",
-    "print(\"TF-IDF test features shape:\", X_test_tfidf.shape)\n"
+    "print(\"TF-IDF test features shape:\", X_test_tfidf.shape)\n",
+    "\n",
+    "\n",
+    "# ================== INLINE TESTS ==================\n",
+    "\n",
+    "# Test preprocess_text function\n",
+    "assert preprocess_text(\"Hello, WORLD! 123\") == \"hello world\", \"Basic cleaning failed\"\n",
+    "assert preprocess_text(\"  Spaces  \\n\") == \"spaces\", \"Whitespace trimming failed\"\n",
+    "assert preprocess_text(None) == \"\", \"None input handling failed\"\n",
+    "assert preprocess_text(12345) == \"\", \"Non-string input handling failed\"\n",
+    "\n",
+    "# Test label encoding correctness\n",
+    "assert set(df_sms['label'].unique()) == set(['ham', 'spam']), \"Unexpected labels\"\n",
+    "assert set(df_sms['label_encoded'].unique()) == set([0,1]), \"Label encoding failed\"\n",
+    "\n",
+    "print(\"All inline tests passed!\")\n"
    ]
   }
  ],
