Applied reweighing technique on Adult Income dataset for bias mitigation based on gender (Ques_6)

--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_6.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_6.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,93 +48,67 @@
     }
    ],
    "source": [
+    "# Enhanced Error Handling, Assertions, and Unit Test\n",
+    "\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from aif360.datasets import BinaryLabelDataset\n",
+    "import numpy as np\n",
+    "from aif360.datasets import StandardDataset\n",
     "from aif360.algorithms.preprocessing import Reweighing\n",
-    "from aif360.metrics import BinaryLabelDatasetMetric\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Step 1: Load the dataset\n",
-    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data'\n",
-    "columns = ['age', 'workclass', 'fnlwgt', 'education', 'education-num', 'marital-status',\n",
-    "           'occupation', 'relationship', 'race', 'sex', 'capital-gain', 'capital-loss',\n",
-    "           'hours-per-week', 'native-country', 'income']\n",
+    "# Load Dataset\n",
+    "try:\n",
+    "    df = pd.read_csv('adult.csv')  # Change path if needed\n",
+    "    print(\"Dataset loaded successfully.\")\n",
+    "except FileNotFoundError:\n",
+    "    raise FileNotFoundError(\"Dataset file not found. Please check the file path.\")\n",
     "\n",
-    "df = pd.read_csv(url, names=columns, sep=',\\s*', engine='python')\n",
-    "df = df.dropna()\n",
+    "# Handle Missing Values\n",
+    "if df.isnull().sum().sum() > 0:\n",
+    "    print(\"Missing values found! Applying forward fill...\")\n",
+    "    df.fillna(method='ffill', inplace=True)\n",
     "\n",
-    "# Step 2: Encode categorical variables\n",
-    "for col in df.select_dtypes(include='object'):\n",
-    "    df[col] = LabelEncoder().fit_transform(df[col])\n",
+    "# Encode categorical variables\n",
+    "try:\n",
+    "    df['income'] = df['income'].apply(lambda x: 1 if '>50K' in x else 0)\n",
+    "    df['sex'] = df['sex'].apply(lambda x: 1 if x.strip().lower() == 'male' else 0)\n",
+    "except Exception as e:\n",
+    "    raise ValueError(f\"Encoding error: {e}\")\n",
     "\n",
-    "# Step 3: Define features and labels\n",
-    "X = df.drop('income', axis=1)\n",
-    "y = df['income']  # 0: <=50K, 1: >50K\n",
+    "# Assertion Checks\n",
+    "assert 'sex' in df.columns, \"Sensitive attribute 'sex' not found.\"\n",
+    "assert set(df['income'].unique()) == {0, 1}, \"Target variable 'income' not binary encoded correctly.\"\n",
     "\n",
-    "# Step 4: Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "# Split data\n",
+    "train_df, test_df = train_test_split(df, test_size=0.3, random_state=42)\n",
     "\n",
-    "# Step 5: Combine for AIF360\n",
-    "train_df = X_train.copy()\n",
-    "train_df['income'] = y_train\n",
+    "assert len(train_df) > 0 and len(test_df) > 0, \"Train/Test split failed — empty dataset encountered.\"\n",
     "\n",
-    "test_df = X_test.copy()\n",
-    "test_df['income'] = y_test\n",
+    "# Convert to AIF360 StandardDataset\n",
+    "privileged_groups = [{'sex': 1}]\n",
+    "unprivileged_groups = [{'sex': 0}]\n",
     "\n",
-    "# Step 6: Create BinaryLabelDataset for training data\n",
-    "dataset_orig_train = BinaryLabelDataset(df=train_df,\n",
-    "                                        label_names=['income'],\n",
-    "                                        protected_attribute_names=['sex'])\n",
+    "train_data = StandardDataset(train_df,\n",
+    "                             label_name='income',\n",
+    "                             favorable_classes=[1],\n",
+    "                             protected_attribute_names=['sex'],\n",
+    "                             privileged_classes=[[1]])\n",
     "\n",
-    "dataset_orig_test = BinaryLabelDataset(df=test_df,\n",
-    "                                       label_names=['income'],\n",
-    "                                       protected_attribute_names=['sex'])\n",
-    "\n",
-    "# Define privileged and unprivileged groups\n",
-    "privileged_groups = [{'sex': 1}]   # male\n",
-    "unprivileged_groups = [{'sex': 0}] # female\n",
-    "\n",
-    "# Step 7: Apply Reweighing\n",
+    "# Apply Reweighing\n",
     "RW = Reweighing(unprivileged_groups=unprivileged_groups,\n",
     "                privileged_groups=privileged_groups)\n",
-    "dataset_transf_train = RW.fit_transform(dataset_orig_train)\n",
     "\n",
-    "# Step 8: Train Logistic Regression with and without reweighing\n",
+    "RW.fit(train_data)\n",
+    "train_transf = RW.transform(train_data)\n",
     "\n",
-    "def train_and_evaluate(X_train, y_train, sample_weight, X_test, y_test, label=\"\"):\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train_scaled = scaler.fit_transform(X_train)\n",
-    "    X_test_scaled = scaler.transform(X_test)\n",
+    "# Unit Test for instance weights\n",
+    "def test_reweighing_weights(dataset):\n",
+    "    weights = dataset.instance_weights\n",
+    "    assert weights is not None, \"Instance weights are None after reweighing.\"\n",
+    "    assert np.all(weights >= 0), \"Negative weights detected in reweighed dataset.\"\n",
+    "    print(\"✅ Reweighing unit test passed.\")\n",
     "\n",
-    "    model = LogisticRegression(max_iter=1000)\n",
-    "    model.fit(X_train_scaled, y_train, sample_weight=sample_weight)\n",
-    "    y_pred = model.predict(X_test_scaled)\n",
-    "\n",
-    "    print(f\"\\nClassification Report {label}:\")\n",
-    "    print(classification_report(y_test, y_pred))\n",
-    "\n",
-    "# Without reweighing\n",
-    "train_and_evaluate(X_train, y_train, None, X_test, y_test, label=\"(Original)\")\n",
-    "\n",
-    "# With reweighing\n",
-    "train_and_evaluate(X_train, y_train, dataset_transf_train.instance_weights,\n",
-    "                   X_test, y_test, label=\"(With Reweighing)\")\n",
-    "\n",
-    "# Step 9: Check fairness metric\n",
-    "metric_orig = BinaryLabelDatasetMetric(dataset_orig_train, \n",
-    "                                       unprivileged_groups=unprivileged_groups,\n",
-    "                                       privileged_groups=privileged_groups)\n",
-    "\n",
-    "metric_rw = BinaryLabelDatasetMetric(dataset_transf_train, \n",
-    "                                     unprivileged_groups=unprivileged_groups,\n",
-    "                                     privileged_groups=privileged_groups)\n",
-    "\n",
-    "print(\"\\nFairness Metrics:\")\n",
-    "print(\"Mean difference before reweighing:\", metric_orig.mean_difference())\n",
-    "print(\"Mean difference after reweighing:\", metric_rw.mean_difference())\n"
+    "test_reweighing_weights(train_transf)\n"
    ]
   }
  ],
