--- a/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_8.ipynb
+++ b/src/Module 9/Ensuring Data Quality in Machine Learning Pipelines/Ques_8.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -36,50 +36,92 @@
     }
    ],
    "source": [
-    "# write your code from here\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import ks_2samp\n",
     "\n",
-    "# Step 1: Simulate Dataset 1 (Reference / Training Data)\n",
+    "# -------------------------\n",
+    "# Utility Functions\n",
+    "# -------------------------\n",
+    "\n",
+    "def validate_input_data(data, name=\"data\"):\n",
+    "    assert isinstance(data, (list, np.ndarray, pd.Series)), f\"{name} must be list, numpy array, or pandas Series\"\n",
+    "    data = np.asarray(data)\n",
+    "    assert data.size > 0, f\"{name} is empty\"\n",
+    "    assert np.issubdtype(data.dtype, np.number), f\"{name} must contain numeric values only\"\n",
+    "    return data\n",
+    "\n",
+    "def perform_ks_test(data1, data2):\n",
+    "    try:\n",
+    "        data1 = validate_input_data(data1, \"Reference Data\")\n",
+    "        data2 = validate_input_data(data2, \"Drifted Data\")\n",
+    "        stat, p_value = ks_2samp(data1, data2)\n",
+    "        return stat, p_value\n",
+    "    except AssertionError as e:\n",
+    "        print(f\"❌ Input Validation Error: {e}\")\n",
+    "        return None, None\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Unexpected Error during KS Test: {e}\")\n",
+    "        return None, None\n",
+    "\n",
+    "# -------------------------\n",
+    "# Simulate Datasets\n",
+    "# -------------------------\n",
     "np.random.seed(42)\n",
-    "reference_data = np.random.normal(loc=50, scale=10, size=1000)  # mean=50, std=10\n",
     "\n",
-    "# Step 2: Simulate Dataset 2 (New / Inference Data) with drift\n",
-    "drifted_data = np.random.normal(loc=55, scale=12, size=1000)  # shifted mean and std\n",
+    "try:\n",
+    "    reference_data = np.random.normal(loc=50, scale=10, size=1000)\n",
+    "    drifted_data = np.random.normal(loc=55, scale=12, size=1000)\n",
+    "    print(\"✅ Data simulated successfully.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error simulating data: {e}\")\n",
+    "    reference_data, drifted_data = [], []\n",
     "\n",
-    "# Convert to DataFrame for convenience\n",
-    "df = pd.DataFrame({\n",
-    "    'reference_data': reference_data,\n",
-    "    'drifted_data': drifted_data\n",
-    "})\n",
+    "# -------------------------\n",
+    "# Visualize\n",
+    "# -------------------------\n",
+    "try:\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.hist(reference_data, bins=30, alpha=0.6, label='Reference Data', density=True)\n",
+    "    plt.hist(drifted_data, bins=30, alpha=0.6, label='Drifted Data', density=True)\n",
+    "    plt.title('Distribution Comparison')\n",
+    "    plt.xlabel('Value')\n",
+    "    plt.ylabel('Density')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error in visualization: {e}\")\n",
     "\n",
-    "# Step 3: Visualize the distributions\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.hist(reference_data, bins=30, alpha=0.6, label='Reference Data', density=True)\n",
-    "plt.hist(drifted_data, bins=30, alpha=0.6, label='Drifted Data', density=True)\n",
-    "plt.title('Distribution Comparison')\n",
-    "plt.xlabel('Value')\n",
-    "plt.ylabel('Density')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
+    "# -------------------------\n",
+    "# Apply KS Test\n",
+    "# -------------------------\n",
+    "ks_stat, p_val = perform_ks_test(reference_data, drifted_data)\n",
     "\n",
-    "# Step 4: Apply Kolmogorov-Smirnov (KS) Test\n",
-    "ks_stat, p_value = ks_2samp(reference_data, drifted_data)\n",
+    "# -------------------------\n",
+    "# Interpret Results\n",
+    "# -------------------------\n",
+    "if ks_stat is not None:\n",
+    "    print(f\"\\nKolmogorov-Smirnov Test Results\")\n",
+    "    print(f\"KS Statistic: {ks_stat:.4f}\")\n",
+    "    print(f\"P-Value: {p_val:.4f}\")\n",
     "\n",
-    "# Step 5: Print Results\n",
-    "print(\"Kolmogorov-Smirnov Test Results\")\n",
-    "print(f\"KS Statistic: {ks_stat:.4f}\")\n",
-    "print(f\"P-Value: {p_value:.4f}\")\n",
+    "    if p_val < 0.05:\n",
+    "        print(\"❌ Data drift detected (p-value < 0.05)\")\n",
+    "    else:\n",
+    "        print(\"✅ No significant data drift detected (p-value >= 0.05)\")\n",
     "\n",
-    "# Step 6: Interpret Results\n",
-    "alpha = 0.05\n",
-    "if p_value < alpha:\n",
-    "    print(\"❌ Data drift detected (p-value < 0.05). Distributions are significantly different.\")\n",
-    "else:\n",
-    "    print(\"✅ No significant data drift detected (p-value >= 0.05).\")\n"
+    "# -------------------------\n",
+    "# Unit Test (Basic)\n",
+    "# -------------------------\n",
+    "def test_ks_on_identical_data():\n",
+    "    sample = np.random.normal(0, 1, 500)\n",
+    "    stat, p = perform_ks_test(sample, sample)\n",
+    "    assert p > 0.95, \"Test failed: identical distributions should have high p-value\"\n",
+    "    print(\"✅ Unit Test Passed: Identical datasets detected as similar.\")\n",
+    "\n",
+    "test_ks_on_identical_data()\n"
    ]
   }
  ],
