--- a/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_2.ipynb
+++ b/src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/Ques_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m roc_auc_score, accuracy_score\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Load your train and test datasets (example placeholders)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Replace with your actual dataset loading code\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m train_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpath_to_train.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m test_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath_to_test.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Add label: 0 for train, 1 for test\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[2], line 9\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m roc_auc_score, accuracy_score\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Load your train and test datasets (example placeholders)\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# Replace with your actual dataset loading code\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m train_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpath_to_train.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m test_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpath_to_test.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Add label: 0 for train, 1 for test\u001b[39;00m\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:948\u001b[0m, in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[1;32m    935\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[1;32m    936\u001b[0m     dialect,\n\u001b[1;32m    937\u001b[0m     delimiter,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    944\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[1;32m    945\u001b[0m )\n\u001b[1;32m    946\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[0;32m--> 948\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:611\u001b[0m, in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    608\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m    610\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[0;32m--> 611\u001b[0m parser \u001b[38;5;241m=\u001b[39m \u001b[43mTextFileReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    613\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[1;32m    614\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
       "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/io/parsers/readers.py:1448\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1445\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m   1447\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 1448\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
@@ -31,64 +31,52 @@
     }
    ],
    "source": [
-    "# write your code from here\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_auc_score, accuracy_score\n",
     "\n",
-    "# Load your train and test datasets (example placeholders)\n",
-    "# Replace with your actual dataset loading code\n",
-    "train_df = pd.read_csv('path_to_train.csv')\n",
-    "test_df = pd.read_csv('path_to_test.csv')\n",
+    "# Load datasets\n",
+    "train_df = pd.read_csv('src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/data/train.csv')\n",
+    "test_df = pd.read_csv('src/Module 9/Hands-on - Data Quality Checks in Data Engineering & ML/data/test.csv')\n",
     "\n",
-    "# Add label: 0 for train, 1 for test\n",
+    "# Add a label column: 0 for train, 1 for test\n",
     "train_df['is_test'] = 0\n",
     "test_df['is_test'] = 1\n",
     "\n",
-    "# Combine datasets\n",
-    "combined_df = pd.concat([train_df, test_df], axis=0).reset_index(drop=True)\n",
+    "# Align columns (in case order differs)\n",
+    "common_cols = list(set(train_df.columns).intersection(set(test_df.columns)))\n",
+    "common_cols = [col for col in common_cols if col != 'is_test']  # exclude label\n",
     "\n",
-    "# Drop target variable if exists, so that classifier learns only distribution difference\n",
-    "# Example: If train_df has 'target' column, drop it here\n",
-    "if 'target' in combined_df.columns:\n",
-    "    combined_df = combined_df.drop(columns=['target'])\n",
+    "# Combine for adversarial validation\n",
+    "combined = pd.concat([train_df[common_cols + ['is_test']], test_df[common_cols + ['is_test']]], ignore_index=True)\n",
     "\n",
-    "# Separate features and labels\n",
-    "X = combined_df.drop(columns=['is_test'])\n",
-    "y = combined_df['is_test']\n",
+    "# Handle missing values if necessary (basic strategy)\n",
+    "combined.fillna(-999, inplace=True)\n",
     "\n",
-    "# Handle categorical variables - example: one-hot encode categorical features if any\n",
-    "X = pd.get_dummies(X)\n",
+    "# Split into train and validation sets for adversarial validation\n",
+    "X = combined[common_cols]\n",
+    "y = combined['is_test']\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.3, stratify=y, random_state=42)\n",
     "\n",
-    "# Split combined data into training and validation for adversarial classifier\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
-    "\n",
-    "# Initialize classifier (you can try other models too)\n",
+    "# Train a classifier to distinguish train vs test\n",
     "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "\n",
-    "# Train classifier\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
-    "# Predict probabilities on validation set\n",
-    "y_pred_proba = clf.predict_proba(X_val)[:,1]\n",
-    "\n",
-    "# Calculate ROC AUC score\n",
-    "auc_score = roc_auc_score(y_val, y_pred_proba)\n",
-    "print(f'Adversarial Validation ROC AUC: {auc_score:.4f}')\n",
-    "\n",
-    "# Also print accuracy as an additional metric\n",
+    "# Evaluate performance\n",
     "y_pred = clf.predict(X_val)\n",
-    "acc_score = accuracy_score(y_val, y_pred)\n",
-    "print(f'Adversarial Validation Accuracy: {acc_score:.4f}')\n",
+    "y_prob = clf.predict_proba(X_val)[:, 1]\n",
+    "\n",
+    "print(\"Adversarial Validation Results:\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_val, y_pred):.4f}\")\n",
+    "print(f\"ROC AUC Score: {roc_auc_score(y_val, y_prob):.4f}\")\n",
     "\n",
     "# Interpretation\n",
-    "if auc_score > 0.7:\n",
-    "    print(\"Significant data drift detected between train and test datasets.\")\n",
+    "if roc_auc_score(y_val, y_prob) > 0.75:\n",
+    "    print(\"⚠️ Significant data drift detected between train and test sets.\")\n",
     "else:\n",
-    "    print(\"No significant data drift detected between train and test datasets.\")\n",
-    "\n",
-    "\n"
+    "    print(\"✅ No significant data drift detected.\")\n"
    ]
   }
  ],
